Version: 2.9.7 1. Update HTTPClient 2. Add Enum